adição da documentação do swagger para as rotas que adicionam e deletam uma categaria de uma task
